vlib/v/checker/tests/struct_multiple_attrs_test.vv
module main

struct Test {
	a int @[a]@[b]
}

fn test_main() {
	assert true
}
